<resources>
    <string name="app_name">My  App Portfolio</string>
    <string name="string_my_title">My Nanodegree App!</string>
    <string name="popular_movies">popular Movies</string>
    <string name="stock_hawk">stock hawk</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="make_your_app_material">make your app material</string>
    <string name="go_ubiquitous">go ubiquitous</string>
    <string name="capstone">capstone</string>
</resources>
