<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thero.myappprotfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_my_title"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:typeface="serif"
        android:textSize="25sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/popular_movies_button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonText"
        android:onClick="buttonPress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/stack_hawk_button"
        android:layout_below="@+id/popular_movies_button"
        android:layout_alignLeft="@+id/popular_movies_button"
        android:layout_alignStart="@+id/popular_movies_button"
        android:layout_alignRight="@+id/popular_movies_button"
        android:layout_alignEnd="@+id/popular_movies_button"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonText"
        android:layout_marginTop="10dp"
        android:onClick="buttonPress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_button"
        android:layout_below="@+id/stack_hawk_button"
        android:layout_alignLeft="@+id/make_your_app_material_button"
        android:layout_alignStart="@+id/make_your_app_material_button"
        android:layout_alignRight="@+id/stack_hawk_button"
        android:layout_alignEnd="@+id/stack_hawk_button"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonText"
        android:layout_marginTop="10dp"
        android:onClick="buttonPress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/make_your_app_material_button"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_alignLeft="@+id/stack_hawk_button"
        android:layout_alignStart="@+id/stack_hawk_button"
        android:layout_alignRight="@+id/stack_hawk_button"
        android:layout_alignEnd="@+id/stack_hawk_button"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonText"
        android:layout_marginTop="10dp"
        android:onClick="buttonPress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/go_ubiquitous_button"
        android:layout_below="@+id/make_your_app_material_button"
        android:layout_alignLeft="@+id/make_your_app_material_button"
        android:layout_alignStart="@+id/make_your_app_material_button"
        android:layout_alignRight="@+id/make_your_app_material_button"
        android:layout_alignEnd="@+id/make_your_app_material_button"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonText"
        android:layout_marginTop="10dp"
        android:onClick="buttonPress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/go_ubiquitous_button"
        android:layout_alignLeft="@+id/go_ubiquitous_button"
        android:layout_alignStart="@+id/go_ubiquitous_button"
        android:layout_alignRight="@+id/go_ubiquitous_button"
        android:layout_alignEnd="@+id/go_ubiquitous_button"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonText"
        android:layout_marginTop="10dp"
        android:onClick="buttonPress"/>
</RelativeLayout>
